# repo-analysis-system

./: .env.example  .gitignore  BITWARDEN-QUICKSTART.md  CLAUDE.md  Dockerfile  Makefile  PROJECT_ALIGNMENT_REVIEW.md  README.md  README_ENHANCEMENTS.md  agentic_prototype.py  automated-cron-analysis-system-design.md  check-secrets.ps1  config.yaml  docker-compose.yml  initial-pr-review-analysis.md  migrate-to-bitwarden.ps1  progress-visuals-corpus.md  pyproject.toml  pytest.ini  requirements.txt  side_agent.py  test-bws-inject.ps1  test_bws_secrets.ps1  visual-timeline-proposals.md
archive/: README.md
config/: init.sql  migration.py  new_config.yaml
docs/: Agents-and-Workflows.md  Bitwarden-Secrets-Integration.md  COMPLEXITY_ANALYSIS.md  Config-and-Secrets.md  Implementation-Anchor-Goals.md  Implementation-Status-and-Roadmap.md  Observability-and-Reporting.md  Overview-and-Goals.md  PHASE_1_IMPLEMENTATION.md  README.md  Runtime-and-Automation.md  State-Model-and-Reducers.md  Synthesis-Analysis.md  System-Architecture.md  TESTING_GUIDE.md  Templates-and-Examples.md  UNIFIED-DECISIONS.md  VULNERABILITY_SCANNING.md  best-practices-reference.md  current-analysis-summary.md
logs/: prototype-run-20251113-173001.md
review_logging/: architectural-pain-points-review.md
scripts/: run_graph.py  run_tests.sh  start_postgres_dev.ps1
security/: __init__.py  vulnerability_scanner.py
src/: __init__.py  repo_manager.py
storage/: __init__.py  adapter.py
tests/: __init__.py  conftest.py  test_baseline_initializer.py  test_complexity_analyzer.py  test_end_to_end.py  (+5 more)
(+115 files in other folders)
